# qt-shapes-drawing-app

./: .clang-format  .cmake-format  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  paintcanvas.cpp  paintcanvas.hpp  resources.qrc
qt-shapes-drawing-app/: qt-shapes-drawing-app.sln  qt-shapes-drawing-app.vcxproj  qt-shapes-drawing-app.vcxproj.filters
